fixed text area(dynamic)

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ body {
     margin: 0;
 }
 
+a, button {
+    cursor: pointer;
+}
+
 /* NAVBAR */
 
 /* LAYOUT */
@@ -44,25 +48,39 @@ body {
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
-    gap: 50px
 }
 
 /* CANVAS */
 
 .canvas-container {
-    width: 605px;
-    height: 610px;
+    width: 500px;
+    height: 500px;
     margin: 20px 0;
 }
 
 /* TOOLS */
 
+.tools-container {
+    display: grid;
+}
+
+/*TOOLS BTNS */
+
 .txt-input {
     width: 186.5px;
     height: 30px;
     margin: 0 0 1px;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+.tools-container .tool-btn {
+    max-width: 30px;
+    max-height: 30px;
+    margin: 4.5px 9px 0 9.5px;
+    padding: 5.5px 5.2px 4.9px 5.2px;
     border-radius: 6px;
     background-color: #fff;
 }
