--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,10 @@
 }
 
 body {
+    height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 a, button {
@@ -21,7 +24,7 @@ a, button {
 }
 
 .content {
-    height: 100vh;
+    height: 90%
 }
 
 .main-layout {
@@ -42,11 +45,25 @@ a, button {
 
 /* GALLERY */
 
+.gallery {
+    margin: 60px 0;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    gap: 30px;
+}
+
+.gallery-item {
+    object-fit: contain;
+    max-height: 33vh;
+    cursor: pointer;
+}
+
 /* GENERATOR */
 
 .generator {
-    height: 100%;
-    display: flex;
+    /* height: 100%; */
+    display: none;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -55,8 +72,8 @@ a, button {
 /* CANVAS */
 
 .canvas-container {
-    width: 500px;
-    height: 500px;
+    max-width: 500px;
+    max-height: 500px;
     margin: 20px 0;
 }
 
@@ -90,7 +107,6 @@ a, button {
 /* FOOTER */
 
 .footer-bc {
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%
