--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,7 @@
 }
 
 body {
-    height: 100%;
     margin: 0;
-    display: flex;
-    flex-direction: column;
 }
 
 a, button {
@@ -24,7 +21,10 @@ a, button {
 }
 
 .content {
-    height: 90%
+    display: flex;
+    flex-direction: column;
+    min-height: 98vh;
+    justify-content: center;
 }
 
 .main-layout {
@@ -79,10 +79,9 @@ a, button {
 /* TOOLS */
 
 .tools-container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
-
-/*TOOLS BTNS */
 
 .txt-input {
     width: 186.5px;
@@ -92,7 +91,18 @@ a, button {
     background-color: #fff;
 }
 
-.tools-container .tool-btn {
+/*TOOLS BTNS */
+
+.tools-grid {
+    margin: 10px 0;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    gap: 5px;
+}
+
+.tool-btn {
+    cursor: pointer;
     max-width: 30px;
     max-height: 30px;
     margin: 4.5px 9px 0 9.5px;
@@ -100,8 +110,6 @@ a, button {
     border-radius: 6px;
     background-color: #fff;
 }
-
-/* ABOUT */
 
 /* FOOTER */
 
