--- a/css/styles.css
+++ b/css/styles.css
@@ -74,16 +74,16 @@ a, button {
 }
 
 .main-nav li.vertical-line {
-    width: 1px;
-    background-color: #8a8a8a;
-    height: 40px;
     margin: auto 0;
+    background-color: #8a8a8a;
+    width: 1px;
+    height: 40px;
 }
 
 .main-nav a {
+    color: #ffffff;
     width: 80px;
     height: 80px;
-    color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,8 +91,8 @@ a, button {
 }
 
 .main-nav a.active {
-    box-shadow: inset 0 -6px rgb(42, 40, 40);
     color: rgb(42, 40, 40);
+    box-shadow: inset 0 -6px rgb(42, 40, 40);
 }
 
 .main-nav li:hover a {
@@ -101,19 +101,19 @@ a, button {
 }
 
 .btn-menu-toggle {
+    display: none;
+    margin-inline-end: 10px;
+    color: rgb(32, 31, 31);
     padding: 5px 10px;
     border-radius: 0.2em;
     border: none;
-    color: rgb(32, 31, 31);
-    margin-inline-end: 10px;
-    display: none;
 }
 
 /* LAYOUT */
 
 .main-bc {
-    background-color: #e3e3e3;
     max-width: 100vw;
+    background-color: #e3e3e3;
 }
 
 .content {
@@ -187,22 +187,22 @@ a, button {
 }
 
 .txt-input {
-    grid-row: 1;
-    grid-column: 1/-1;
     width: 100%;
     height: 40px;
     margin: 0 5px;
-    border-radius: 6px;
+    grid-row: 1;
+    grid-column: 1/-1;
     background-color: #fff;
+    border-radius: 6px;
 }
 
 .tool-btn {
-    cursor: pointer;
-    max-height: 40px;
     margin: 0 10px;
+    max-height: 40px;
+    background-color: #fff;
+    cursor: pointer;
     padding: 5px;
     border-radius: 8px;
-    background-color: #fff;
     transition: background-color 0.2s;
 }
 
@@ -215,20 +215,20 @@ a, button {
 }
 
 .fonts-input {
-    cursor: pointer;
-    grid-row: 4;
-    grid-column: 1/4;
     width: 100%;
     height: 40px;
     margin: 0 5px;
-    border-radius: 6px;
     background-color: #fff;
+    cursor: pointer;
+    grid-row: 4;
+    grid-column: 1/4;
+    border-radius: 6px;
 }
 
 .color-input {
-    opacity: 0;
-    height: 1px;
     width: 1px;
+    height: 1px;
+    opacity: 0;
 }
 
 .publish-btn {
@@ -249,16 +249,16 @@ a, button {
 /* FOOTER */
 
 .footer-bc {
+    width: 100%;
     bottom: 0;
     left: 0;
-    width: 100%
 }
 
 /* ABOUT */
 
 .about {
-    display: none;
     height: 100%;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -287,8 +287,8 @@ a, button {
 /* MEMES */
 
 .memes {
-    top: 0;
     height: 100%;
+    top: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     gap: 30px;
@@ -296,16 +296,16 @@ a, button {
 
 .meme-item {
     object-fit: cover;
-    max-height: 30vh;
     width: 100%;
+    max-height: 30vh;
     cursor: pointer;
     transition-duration: 0.2s;
 }
 
 .meme-title {
+    color: #975009;
     grid-row: 1;
     grid-column: 1/-1;
-    color: #975009;
 }
 
 /* MODAL */
@@ -315,27 +315,58 @@ a, button {
 }
 
 .modal.open {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
     z-index: 15;
     background-color: #d6d4cc;
     padding: 50px;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     gap: 25px;
 }
 
-.modal .facebook-modal {
+.modal a{
+    color: #fff;
+}
+.modal button:not(:last-child){
+    padding: 10px;
+    color: #fff;
+    border-radius: 15px;
+    transition: box-shadow 0.1s ease-in-out;
+}
+
+.modal button:not(:last-child):hover {
+    box-shadow: 4px 3px 7px 0px rgb(41 41 41 / 85%);
+}
+
+.facebook-modal {
     background-color: #3B5998;
     color: #fff;
 }
 
+.upload-modal{
+    background-color: rgb(65, 161, 94);
+}
+.download-modal{
+    background-color: rgb(177, 65, 45);
+}
+.save-modal{
+    background-color: rgb(112, 49, 170);
+}
+
 .close-modal {
     position: absolute;
-    top: 0;
-    right: 0;
+    background-color: rgb(56, 54, 54);
+    color: #fff;
+    top: 3px;
+    right: 3px;
+    padding: 5px;
+    transition: background-color 0.3s ease-in;
+}
+.close-modal:hover{
+    background-color: rgb(206, 150, 30);
 }
 
 /* SMALL PC */
@@ -390,8 +421,8 @@ a, button {
     }
     .gallery-item {
         object-fit: contain;
-        max-height: 45vh;
         max-width: 60vw;
+        max-height: 45vh;
     }
     /* MEMES */
     .memes {
@@ -401,8 +432,8 @@ a, button {
     }
     .meme-item {
         object-fit: cover;
-        max-height: 30vh;
         width: 100%;
+        max-height: 30vh;
         cursor: pointer;
         transition-duration: 0.2s;
     }
@@ -472,12 +503,12 @@ a, button {
         color: rgb(238, 230, 230);
     }
     .btn-menu-toggle {
+        display: block;
+        color: rgb(32, 31, 31);
         padding: 5px 10px;
         border-radius: 0.2em;
         border: none;
-        color: rgb(32, 31, 31);
         margin-inline-end: 10px;
-        display: block;
     }
     .vertical-line {
         display: none;
