--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    height: 100vh;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
@@ -19,32 +20,23 @@ a, button {
     cursor: pointer;
 }
 
-/* HELPERS */
+/* LAYOUT */
 
-/* FLEX*/
+.main-bc {
+    width: 100%;
+    background-color: #e3e3e3;
+}
 
-.flex {
+.content {
+    min-height: 99vh;
     display: flex;
-}
-
-.flex.space-between {
-    justify-content: space-between;
-}
-
-.flex.justify-center {
+    flex-direction: column;
     justify-content: center;
 }
 
-.flex.align-center {
-    align-items: center;
-}
-
-/* LIST */
-
-.clean-list {
-    padding-inline-start: 0px;
-    margin: 0;
-    list-style-type: none;
+.main-layout {
+    max-width: 1240px;
+    margin: 0 auto;
 }
 
 /* NAVBAR */
@@ -54,14 +46,18 @@ a, button {
 }
 
 .nav-bar-bc {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
 }
 
+.nav-bar {
+    justify-content: space-between;
+    align-items: center;
+}
+
 .logo {
-    max-height: 40px;
+    height: 40px;
     padding: 5px;
 }
 
@@ -102,37 +98,41 @@ a, button {
 
 .btn-menu-toggle {
     display: none;
-    margin-inline-end: 10px;
-    color: rgb(32, 31, 31);
-    padding: 5px 10px;
-    border-radius: 0.2em;
-    border: none;
+    visibility: hidden;
 }
 
-/* LAYOUT */
+/* SEARCH-BAR */
 
-.main-bc {
-    max-width: 100vw;
-    background-color: #e3e3e3;
+.search {
+    padding: 70px;
+    background-color: #8a8a8a;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    min-height: 98vh;
-    justify-content: center;
+.search *:not(input) {
+    cursor: pointer;
 }
 
-.main-layout {
-    max-width: 1240px;
-    margin: 0 auto;
+.words-list li {
+    margin: 10px;
 }
+
+.all-words-box {}
+
+.all-words-btn {}
 
 /* GALLERY */
 
+.search-bar {
+    position: absolute;
+    width: 100%;
+    top: 85px;
+    display: flex;
+}
+
 .gallery {
-    margin: 10vh 0;
-    height: 100%;
+    margin: 50px 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     gap: 30px;
@@ -153,10 +153,10 @@ a, button {
 /* GENERATOR */
 
 .generator {
-    display: none;
-    flex-direction: row;
+    display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 100%
 }
 
 /* CANVAS */
@@ -176,7 +176,7 @@ a, button {
 /*CONTROL-BOX */
 
 .control-box {
-    height: 500px;
+    /* height: 500px; */
     margin: 0 10px;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
@@ -250,15 +250,19 @@ a, button {
 
 .footer-bc {
     width: 100%;
-    bottom: 0;
-    left: 0;
+}
+
+.footer-content {
+    font-size: 1.3em;
+    padding: 10px 0;
 }
 
 /* ABOUT */
 
 .about {
-    height: 100%;
-    display: none;
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -287,11 +291,12 @@ a, button {
 /* MEMES */
 
 .memes {
-    height: 100%;
-    top: 0;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
 
 .meme-item {
@@ -302,19 +307,18 @@ a, button {
     transition-duration: 0.2s;
 }
 
-.meme-title {
+.memes-title {
     color: #975009;
-    grid-row: 1;
-    grid-column: 1/-1;
 }
 
 /* MODAL */
 
 .modal {
-    display: none;
+    display: flex;
+    flex-direction: column;
 }
 
-.modal.open {
+.modal {
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -327,10 +331,11 @@ a, button {
     gap: 25px;
 }
 
-.modal a{
+.modal a {
     color: #fff;
 }
-.modal button:not(:last-child){
+
+.modal button:not(:last-child) {
     padding: 10px;
     color: #fff;
     border-radius: 15px;
@@ -346,13 +351,15 @@ a, button {
     color: #fff;
 }
 
-.upload-modal{
+.upload-modal {
     background-color: rgb(65, 161, 94);
 }
-.download-modal{
+
+.download-modal {
     background-color: rgb(177, 65, 45);
 }
-.save-modal{
+
+.save-modal {
     background-color: rgb(112, 49, 170);
 }
 
@@ -365,7 +372,8 @@ a, button {
     padding: 5px;
     transition: background-color 0.3s ease-in;
 }
-.close-modal:hover{
+
+.close-modal:hover {
     background-color: rgb(206, 150, 30);
 }
 
@@ -405,7 +413,7 @@ a, button {
         max-width: 100%
     }
     .gallery {
-        grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
 }
 
@@ -414,21 +422,21 @@ a, button {
 @media screen and (max-width: 760px) {
     /* GALLERY */
     .gallery {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 70px 0;
+        grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     }
     .gallery-item {
         object-fit: contain;
-        max-width: 60vw;
-        max-height: 45vh;
+        max-height: 25vh;
+    }
+    .gallery-item:hover {
+        transform: scale(1);
     }
     /* MEMES */
     .memes {
         display: flex;
         flex-direction: column;
         align-items: center;
+        min-height: unset;
     }
     .meme-item {
         object-fit: cover;
@@ -443,7 +451,7 @@ a, button {
     /* GENERATOR */
     .generator {
         height: 100%;
-        display: none;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -459,6 +467,9 @@ a, button {
         max-height: 25vh;
     }
     /* NAVBAR */
+    nav * {
+        z-index: 30;
+    }
     body.menu-open .main-nav {
         transform: translateX(0);
         box-shadow: -8px 0px 20px rgb(0 0 0 / 20%);
@@ -475,7 +486,7 @@ a, button {
     .main-nav {
         z-index: 10;
         position: fixed;
-        top: 40px;
+        top: 65px;
         right: 0;
         flex-direction: column;
         background-color: rgb(41 41 41 / 95%);
@@ -503,14 +514,44 @@ a, button {
         color: rgb(238, 230, 230);
     }
     .btn-menu-toggle {
-        display: block;
+        display: inline-block;
+        visibility: visible;
+        margin: 10px;
         color: rgb(32, 31, 31);
-        padding: 5px 10px;
+        padding: 10px 15px;
         border-radius: 0.2em;
         border: none;
-        margin-inline-end: 10px;
+        font-size: 1.2em;
     }
     .vertical-line {
+        visibility: hidden;
         display: none;
     }
+}
+
+/* HELPERS */
+
+.hidden {
+    display: none !important;
+    visibility: hidden;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.grid {
+    display: grid;
+}
+
+/* LIST */
+
+.clean-list {
+    padding-inline-start: 0px;
+    margin: 0;
+    list-style-type: none;
 }
