--- a/css/styles.css
+++ b/css/styles.css
@@ -155,9 +155,9 @@ a, button {
 
 .generator {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    height: 100%
+    margin: auto 0;
 }
 
 /* CANVAS */
