added upload img

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,25 @@ a, button {
     gap: 100px;
 }
 
+/* upload */
+
+.upload-img {
+    position: absolute;
+    top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.upload-img h2 {
+    color: #a09b6e;
+    font-family: 'Trocchi', serif;
+    font-size: 45px;
+    font-weight: normal;
+    line-height: 1.8em;
+    margin: 0;
+}
+
 /* CANVAS */
 
 .canvas-container {
@@ -200,7 +219,7 @@ a, button {
 /*CONTROL-BOX */
 
 .control-box {
-    /* height: 500px; */
+    height: 500px;
     margin: 0 10px;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
@@ -475,6 +494,7 @@ a, button {
     }
     /* TOOLS */
     .control-box {
+        max-height: 25vh;
         grid-template-columns: repeat(5, 48px);
         grid-auto-rows: auto;
         gap: 10px;
