--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,8 @@ a, button {
 
 /* LAYOUT */
 
-/* .main-container {} */
-
 .content {
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
 }
@@ -98,11 +97,15 @@ a, button {
 /* SEARCH-BAR */
 
 .search {
+    flex-direction: column;
+    background-color: #afa8a8;
+}
+
+.search-bar{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    padding: 30px 10px;
-    background-color: #afa8a8;
+    padding: 15px 0;
 }
 
 .search input {
@@ -112,7 +115,6 @@ a, button {
     color: #111;
     box-shadow: 3px 1px 0px 2px, 0px -1px 0px 2px rgba(0, 0, 0, 0.62);
     letter-spacing: 2px;
-    text-transform: uppercase;
 }
 
 .search li, span {
@@ -130,6 +132,31 @@ a, button {
 
 .words-list li {
     margin: 10px;
+}
+
+.search-word {
+    user-select: none;
+}
+
+.upload-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.upload-img h2 {
+    cursor: pointer;
+    text-transform: uppercase;
+    background: #2e5462;
+    padding: 15px;
+    border-radius: 30px;
+    transition: text-shadow 0.3s ease-out;
+    margin: 10px 0;
+}
+
+.upload-img h2:hover {
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
 }
 
 /* GALLERY */
@@ -155,33 +182,15 @@ a, button {
 /* upload */
 
 .meme-gen {
-    min-height: 90vh;
     display: flex;
     flex-direction: column;
-}
-
-.upload-img {
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.upload-img h2 {
-    color: #a09b6e;
-    font-family: 'Trocchi', serif;
-    font-size: 2.5em;
-    font-weight: normal;
-    line-height: 1.8em;
-    margin: 0;
+    flex: 1;
 }
 
 /* GENERATOR */
 
 .generator {
     display: flex;
-    flex: 1;
     justify-content: center;
     align-items: center;
     margin: auto 0;
@@ -228,6 +237,7 @@ a, button {
 .tool-btn {
     margin: 0 10px;
     height: 40px;
+    width: 40px;
     background-color: #fff;
     cursor: pointer;
     padding: 5px;
@@ -266,12 +276,13 @@ a, button {
     font-size: large;
     font-weight: bold;
     grid-row: 5;
-    grid-column: 4/6;
+    grid-column: 2/5;
+    width: 100%;
     transition: background-color 0.2s;
 }
 
 .publish-btn:hover {
-    background-color: rgb(44, 21, 144);
+    background-color: #2e5462;
     color: #fff;
 }
 
@@ -289,7 +300,7 @@ a, button {
 /* ABOUT */
 
 .about {
-    min-height: 90vh;
+    flex: 1;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -321,14 +332,14 @@ a, button {
 /* MY-MEMES */
 
 .memes {
-    min-height: 90vh;
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.meme-title h1{
+.meme-title h1 {
     color: #7c795d;
     font-family: 'Trocchi', serif;
     font-size: 2.5em;
@@ -337,7 +348,7 @@ a, button {
     margin: 0;
 }
 
-.meme-title h2{
+.meme-title h2 {
     color: #8b8763;
     font-family: 'Trocchi', serif;
     font-size: 1.8em;
@@ -361,7 +372,7 @@ a, button {
     gap: 25px;
 }
 
-.modal a{
+.modal a {
     color: #fff;
 }
 
@@ -459,6 +470,7 @@ a, button {
     }
     /* GENERATOR */
     .generator {
+        flex: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -558,11 +570,15 @@ a, button {
         right: 0;
         display: inline-block;
         visibility: visible;
-        color: rgb(32, 31, 31);
-        padding: 7px 15px;
-        border-radius: 0.2em;
         border: none;
-        font-size: 1.2em;
+        color: #fff;
+        background-color: transparent;
+        padding: 7px 15px;
+        font-size: 1.3em;
+        transition: text-shadow 0.2s;
+    }
+    .btn-menu-toggle:hover{
+        text-shadow:  1px 1px 10px black;;
     }
     .vertical-line {
         visibility: hidden;
